# ShellLite

./: CONTRIBUTING.md  SECURITY.md  pyproject.toml  shl.bat
shell_lite/: ast_nodes.py  compiler.py  interpreter.py  lsp_server.py  parser_gbp.py
shell_lite/llvm_backend/: builder.py  codegen.py
shell_lite/stdlib/: web.shl
tests/: test_stdlib.py
