[build-system]
requires = ["setuptools>=61.0,<70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shell-lite"
version = "0.6.1.2"
description = "ShellLite is a programming language designed to be as readable as plain English. Code like you Think!"
readme = "README_PYPI.md"
requires-python = ">=3.8"
license = {text = "GPLv3 with classpath exception"}
authors = [{email = "contact@shelllite.tech"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["prompt_toolkit>=3.0.43", "llvmlite>=0.42.0"]

[project.scripts]
shl = "shell_lite.main:main"

[tool.setuptools.packages.find]
include = ["shell_lite", "shell_lite.*"]

[tool.setuptools.package-data]
shell_lite = ["stdlib/*.shl"]

[tool.ruff]
target-version = "py312"
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = [
    "F403", "F405", "B904", "E701", "E741", "E501", "E402", 
    "B007", "E722", "F811", "F841", "F601", "B905"
]
